# sf-data-pipelines-quant

./: .gitignore  README.md  charts.py  config.yaml  file_struct.txt  pyproject.toml  test.py
pipelines/: __main__.py  all_pipelines.py  all_signals_flow.py  assets_flow.py  barra_assets_flow.py  barra_exposures_flow.py  barra_returns_flow.py  barra_risk_flow.py  barra_signals_flow.py  barra_volume_flow.py  composite_alphas_flow.py  covariance_matrix_flow.py  crsp_daily_flow.py  crsp_events_flow.py  crsp_monthly_flow.py  crsp_v2_daily_flow.py  crsp_v2_monthly_flow.py  ftse_russell_flow.py  portfolio_weights_backtest_flow.py  signal_backtest_flow.py  signal_output_utils.py  signal_returns_flow.py  signal_weights_flow.py  signals.py  signals_flow.py  ten_k_filings_flow.py  ten_k_signals_flow.py
pipelines/alpha/: alpha.py  alpha_flow.py  scores.py  workflow.py
pipelines/components/: models.py  signals.py  types.py
pipelines/dao/: dao.py  signals_dao.py
pipelines/ingestion/: all_pipelines.py  barra_factors_flow.py  barra_returns_flow.py  barra_risk_flow.py  barra_tickers_flow.py  barra_volume_flow.py  crsp_v2_monthly_flow.py  ftse_russell_flow.py
pipelines/ingestion_flows/: all_pipelines.py  barra_covariances_flow.py  barra_cusips_flow.py  barra_specific_returns.py
pipelines/loaders/: assets.py
pipelines/portfolio/: alpha_flow.py  scores_flow.py
pipelines/production/: alpha_flows.py  alphas.py  main_production_flows.py  score_flows.py  signal_flows.py  weight_flows.py
pipelines/service/: portfolio_service.py  (+1 more)
scripts/: assets.sh  backfill.sh  crontab.sh
(+22 files in other folders)
